[tool.poetry]
name = "collectri-pipeline"
version = "0.5.43"
description = "This is a pipeline to process the information from the CollecTRI dataset coming from CSV files"
authors = [
    "Edwin Carreño <edwin.carreno.lozano@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biocypher = "^0.5.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
